name:                tripletown
version:             0.1.0.0
synopsis:            A console-based version of http://spryfox.com/our-games/tripletown/
homepage:            https://github.com/tripletown/dmjio
license:             BSD3
license-file:        LICENSE
author:              David Johnson
maintainer:          djohnson.m@gmail.com
category:            Game
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

extra-source-files:
    README.md

executable main
  main-is:             Main.hs
  hs-source-dirs:      exe
  build-depends:       base, tripletown
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     TripleTown
  other-extensions:    FlexibleContexts, RecordWildCards
  build-depends:       base, containers, mtl, random
  default-language:    Haskell2010

test-suite tests
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  hs-source-dirs:      test
  build-depends:       base, hspec, containers, tripletown, mtl
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dmjio/tripletown